--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@
 title: UMS Desktop App for Windows
 description: Simply wraps UMS using Electron.
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
