--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # _config.yml
-title: UMS Desktop App for Windows
-description: Simply wraps UMS using Electron.
+title: ums
+description: ClaususOrbis
 markdown: kramdown
 theme: jekyll-theme-hacker
